Mejorando la lista de tareas.

--- a/toDo.html
+++ b/toDo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="toDocss.css">
@@ -8,18 +9,13 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>Este es el titulo, pasa algo?</h1>
-    <h2>Cosas para hacer</h2>
+    <h1>Things to do</h1>
     <div class="contenedorPlaceholder">
         <input id="userInput" type="text" placeholder="Ingresa tu to do">
         <button id="enter">Enter</button>
     </div>
     
     <ul class="contenedor">
-        <li>hacer comida</li>
-        <li>hacer la tarea</li>
-        <li>hacer ejercicio</li>
-        <li>hacer la cama</li>
-    </div>
+        
 </body><script type="text/javascript" src="todojs.js"></script>
 </html>
