--- a/toDo.html
+++ b/toDo.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Things to do</h1>
     <div class="contenedorPlaceholder">
-        <input id="userInput" type="text" placeholder="Ingresa tu to do">
+        <input id="userInput" type="text" placeholder="Add a task here">
         <button id="enter">Enter</button>
     </div>
     
